# Lista6Projekt

./: CGeneticAlgorithm.cpp  CGeneticAlgorithm.h  CIndividual.cpp  CIndividual.h  CKnapsackProblem.cpp  CKnapsackProblem.h  CMakeLists.txt  main.cpp
pliki/: kanp1.txt
